Better responsive web design and some smaller fixes

--- a/page5.html
+++ b/page5.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <a href="index.html">How To Join</a>
         <a href="page2.html">Claiming Land</a>
-        <a href="page3.html">Warps/Homes/TPA/RTP</a>
+        <a href="page3.html">Warps, Homes, TPA, and RTP</a>
         <a href="page4.html">mcMMO</a>
         <a href="page5.html">Magic</a>
         <a href="page6.html">Sign Shops</a>
@@ -29,7 +29,7 @@
     <!--Main content-->
     <main class="content">
         <h2>Magic - Wands, Bows, Spells, and More</h2>
-        <img src="Images/magicHeader.jpg" alt="Spell Array above hotbar">
+        <img id="magicHeader" src="Images/magicHeader.jpg" alt="Spell Array above hotbar">
         <h3>Overview</h3>
         <p>This plugin consists of dozens of different spells, several new weapons, and more. I will not be able to cover most of it in this page, but the 
             <a target="blank_" href="https://github.com/elBukkit/MagicPlugin/wiki">wiki</a> covers most of the plugin very well.</p>
