--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <a href="index.html">How To Join</a>
         <a href="page2.html">Claiming Land</a>
-        <a href="page3.html">Warps/Homes/TPA/RTP</a>
+        <a href="page3.html">Warps, Homes, TPA, and RTP</a>
         <a href="page4.html">mcMMO</a>
         <a href="page5.html">Magic</a>
         <a href="page6.html">Sign Shops</a>
