Added notes about upcoming changes

--- a/page5.html
+++ b/page5.html
@@ -39,7 +39,9 @@
             or your own.
         </p>
         <h3>Other Weapons/Gear</h3>
-        <p>Magic has more tools and weapons to offer besides the wand. Check the wiki and recipe book to learn how to craft and use these weapons.</p>
+        <p>Magic has more tools and weapons to offer besides the wand. Check the wiki and recipe book to learn how to <strike>craft and</strike> use these weapons.
+            <br><strong>NOTE - The system to gain magic weapons and gear will be changing soon, please be tuned for more updates.</strong>
+        </p>
         <h3>Custom Mobs</h3>
         <p>Magic also adds in some custom mobs, which can spawn in certain places. (Beware of the mega phantom, it will one tap you, even if you think it won't).</p>
         <h3>Other Resources</h3>
