announcements sidebar, updated magic items, nickname info

--- a/page2.html
+++ b/page2.html
@@ -23,6 +23,8 @@
     </nav>
     <!--Sidebar-->
     <div class="sidebar">
+        <h3 class="sidebar-heading">Announcements</h3>
+        <p class="sidebar-text">No announcements right now, stay tuned!</p>
         <h3 class="sidebar-heading">Support</h3>
         <p class="sidebar-text">DM <strong>@williamodavis</strong> or <strong>@legoro_roland</strong> on Discord, or use the <strong>#minecraft-chat</strong> channel.</p>
     </div>
