--- a/page5.html
+++ b/page5.html
@@ -23,6 +23,8 @@
     </nav>
     <!--Sidebar-->
     <div class="sidebar">
+        <h3 class="sidebar-heading">Announcements</h3>
+        <p class="sidebar-text">No announcements right now, stay tuned!</p>
         <h3 class="sidebar-heading">Support</h3>
         <p class="sidebar-text">DM <strong>@williamodavis</strong> or <strong>@legoro_roland</strong> on Discord, or use the <strong>#minecraft-chat</strong> channel.</p>
     </div>
@@ -38,10 +40,14 @@
             Pressing 'q'(or whatever your drop keybind is) will allow you select spells using your number keys. Unlock more spells by clicking with the wand on an enchantment table, either at spawn
             or your own.
         </p>
+        <img class="sideImage diagonMap" src="Images/DiagonAlleyMap.png">
         <h3>Other Weapons/Gear</h3>
-        <p>Magic has more tools and weapons to offer besides the wand. Check the wiki and recipe book to learn how to <strike>craft and</strike> use these weapons.
-            <br><strong>NOTE - The system to gain magic weapons and gear will be changing soon, please be tuned for more updates.</strong>
+        <p>Magic has more tools and weapons to offer besides the wand. Check the wiki to learn how to use these weapons.
+            <br>To acquire these items, first go to Diagon Alley (check out <a href="page3.html">this page</a> to learn how). After warping, head into the big building, Gringotts, at the end of the street.
+            (Check out the map on the right to see where Gringotts is).
         </p>
+        <p><br>At Gringotts, you can sell mob drops for emeralds, and emeralds for money. Money can be used to buy each of the special magical pieces of gear. 
+        You can also come here to learn new spells instead of using an enchantment table.</p>
         <h3>Custom Mobs</h3>
         <p>Magic also adds in some custom mobs, which can spawn in certain places. (Beware of the mega phantom, it will one tap you, even if you think it won't).</p>
         <h3>Other Resources</h3>
