--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </nav>
     <!--Sidebar-->
     <div class="sidebar">
+        <h3 class="sidebar-heading">Announcements</h3>
+        <p class="sidebar-text">No announcements right now, stay tuned!</p>
         <h3 class="sidebar-heading">Support</h3>
         <p class="sidebar-text">DM <strong>@williamodavis</strong> or <strong>@legoro_roland</strong> on Discord, or use the <strong>#minecraft-chat</strong> channel.</p>
     </div>
@@ -36,6 +38,8 @@
         <h3>Server Resource Packs</h3>
         <p>Since our server makes use of some in depth plugins, we recommend that you enable resource packs for this server upon joining.<br>If you join from Bedrock, resource packs will
         not work properly. This is a known issue with the Bedrock crossplay plugin, and there is nothing we can do about it. </p>
+        <h3>Nicknames</h3>
+        <p>Check out <a target="blank_" href="https://play-minecraft-servers.com/rgb-gradient-creator/">this link</a> to learn how to make your nickname colorful using the <strong>/nick</strong> command.</p>
         <br><br><br>
         <a href="#"><h3 class="backToTop">Back to Top</h3></a> <!--Back to top link-->
     </main>
