Updated info for 7/28/24 wipe

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <a href="page2.html">Claiming Land</a>
         <a href="page3.html">Warps, Homes, TPA, and RTP</a>
         <a href="page4.html">mcMMO</a>
-        <a href="page5.html">Magic</a>
+        <!--<a href="page5.html">Magic</a>-->
         <a href="page6.html">Sign Shops</a>
+        <a href="page7.html">All Plugins</a>
         <!--<a href="test.html">Test Page for Assignments</a>-->
     </nav>
     <!--Sidebar-->
@@ -33,8 +34,8 @@
         <h2>Welcome to our Server! How to Join, Use our Variety of Plugins, and More.</h2>
         <img src="Images/homeHeader.png" alt="Server spawn with shaders enabled">
         <h3>How To Join</h3>
-        <p>The server is available to join from Bedrock, and all 1.20.x versions.<br>In order to join, join the IP <strong>server.pajamies.party:25502</strong>. 
-            After connecting for the first time, you will be given a code. DM this code to <strong>@SerenityMinecraft</strong>, and rejoin.</p>
+        <p>The server is available to join from Bedrock, and all versions, but we recommend you join on 1.21.<br>In order to join, join the IP <strong>68.101.126.27</strong>. If you are joining on Bedrock, the port is <strong>25565</strong>.
+            <br><s>After connecting for the first time, you will be given a code. DM this code to <strong>@SerenityMinecraft</strong>, and rejoin.</s>(Disabled temporarily)</p>
         <h3>Server Resource Packs</h3>
         <p>Since our server makes use of some in depth plugins, we recommend that you enable resource packs for this server upon joining.<br>If you join from Bedrock, resource packs will
         not work properly. This is a known issue with the Bedrock crossplay plugin, and there is nothing we can do about it. </p>
