--- a/page3.html
+++ b/page3.html
@@ -17,8 +17,9 @@
         <a href="page2.html">Claiming Land</a>
         <a href="page3.html">Warps, Homes, TPA, and RTP</a>
         <a href="page4.html">mcMMO</a>
-        <a href="page5.html">Magic</a>
+        <!--<a href="page5.html">Magic</a>-->
         <a href="page6.html">Sign Shops</a>
+        <a href="page7.html">All Plugins</a>
         <!--<a href="test.html">Test Page for Assignments</a>-->
     </nav>
     <!--Sidebar-->
@@ -35,9 +36,8 @@
         <h3>Warps</h3>
         <p>Our server has a variety of important locations that can be easily accessed by running the <strong>/warp [warpName]</strong> command. All warps are listed below.</p>
         <ul>
-            <li><strong>spawn</strong> - Teleports you to the world spawn hub</li>
-            <li><strong>parkour</strong> - A fun little parkour spiral map</li>
-            <li><strong>Diagon_Alley</strong> - A centralized shop area for our player to player shops(See the 'sign shops' page)</li>
+            <li><strong>spawn</strong> - Teleports you to the world spawn hub and shop board</li>
+            <!--<li><strong>parkour</strong> - A fun little parkour spiral map</li>-->
         </ul>
         <h3>Homes</h3>
         <p>Each player on the server can set 3 homes, that they can tp to whenever they want. Commands for them are listed below.</p>
