--- a/page6.html
+++ b/page6.html
@@ -17,8 +17,9 @@
         <a href="page2.html">Claiming Land</a>
         <a href="page3.html">Warps, Homes, TPA, and RTP</a>
         <a href="page4.html">mcMMO</a>
-        <a href="page5.html">Magic</a>
+        <!--<a href="page5.html">Magic</a>-->
         <a href="page6.html">Sign Shops</a>
+        <a href="page7.html">All Plugins</a>
         <!--<a href="test.html">Test Page for Assignments</a>-->
     </nav>
     <!--Sidebar-->
@@ -36,7 +37,7 @@
         <p>Sign shops allow players to set up simple, automated trades with other players, like trading one stack of logs for 5 emeralds. Watch the video below for instructions on how to use the sign shops.</p>
         <iframe id="id5" src="https://www.youtube.com/embed/o8-o_hJ8Vk4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h3>Additional Notes</h3>
-        <p>These shops can be set up anywhere, but if you run <strong>/warp Diagon_Alley</strong>, it will take you to an area where many shops are set up.</p>
+        <p>These shops can be set up anywhere, and we suggest that you add your shop's info to the board at spawn. We may implement a centralised shop area in the future.</p>
         <br><br><br>
         <a href="#"><h3 class="backToTop">Back to Top</h3></a> <!--Back to top link-->
     </main>
