--- a/page7.html
+++ b/page7.html
@@ -9,7 +9,7 @@
 <body>
     <!--Title bar-->
     <header class="title-bar">
-        <h1>mcMMO</h1>
+        <h1>Sign Shops</h1>
     </header>
     <!--Navbar-->
     <nav class="navbar">
@@ -31,16 +31,15 @@
     </div>
     <!--Main content-->
     <main class="content">
-        <h2>mcMMO</h2>
-        <img id="mcmmoimage" src="Images/mcmmoLogo.jpg" alt="mcmmo logo">
-        <h3>Overview</h3>
-        <p>mcMMO is a leveling plugin that makes your tools and abilities stronger as you use them more. As you hit milestone levels, like level 50, 100, 200, etc, you unlock more abilities and 
-            upgrade existing abilities.
-        </p>
-        <h3>Important Commands</h3>
-        <ul>
-            <li><strong>/mcrank</strong> - Shows your ranking in skill levels compared to other players.</li>
-            <li><strong>/[skillName]</strong> - Shows an overview of the skill, and what unlocked abilities do.</li>
+        <h2>All Plugins</h2>
+        <p>Below is a list of all plugins that involve the player.</p>
+        <br><ul>
+            <li><strong>BetterRTP</strong>: Allows the player to RTP, check out <a href="page3.html">this page</a> for info.</li>
+            <li><strong>Gravestones Plus</strong>: Creates gravestones when the player dies, so player items do not despawn.</li>
+            <li><strong>GSit</strong>: Allows the player to sit on slabs/stairs.</li>
+            <li><strong>HuskClaims</strong>: Land Claiming plugin, see <a href="page2.html">this page</a> for more info.</li>
+            <li><strong>mcMMO</strong>: Levelling plugin, see <a href="page4.html">this page</a> for more info.</li>
+            <li><strong>SignShop</strong>: Allows players to create PtP shops, see <a href="page6.html">this page</a> for more info.</li>
         </ul>
         <br><br><br>
         <a href="#"><h3 class="backToTop">Back to Top</h3></a> <!--Back to top link-->
