--- a/page5.html
+++ b/page5.html
@@ -17,8 +17,9 @@
         <a href="page2.html">Claiming Land</a>
         <a href="page3.html">Warps, Homes, TPA, and RTP</a>
         <a href="page4.html">mcMMO</a>
-        <a href="page5.html">Magic</a>
+        <!--<a href="page5.html">Magic</a>-->
         <a href="page6.html">Sign Shops</a>
+        <a href="page7.html">All Plugins</a>
         <!--<a href="test.html">Test Page for Assignments</a>-->
     </nav>
     <!--Sidebar-->
